--- a/src/pages/schedule/schedule.scss
+++ b/src/pages/schedule/schedule.scss
@@ -193,195 +193,188 @@
     width: 100vw;
     height: 95vh;
 
+    .date {
+      display: flex;
+      justify-content: center;
+      color: rgb(65, 120, 142);
+    }
 
-    .scheduleComponentContainerFlex{
+    .scheduleOxGrid {
+      display: grid;
+      grid-template-rows: 10% 90%;
+      background-color: #2d3848;
+      height: 80vh;
+      width: 80vw;
+      border-radius: 2vh;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+        0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      pointer-events: none;
 
-      .date{
+      .scheduleTitle {
+        padding: 0;
+        margin: 0;
+        font-size: 4vh;
+        color: #bbc5d1;
+        font-weight: 600;
         display: flex;
         justify-content: center;
-        color:rgb(65, 120, 142)
+        height: 100%;
+        width: 80vw;
+        align-items: center;
       }
 
+      .scheduleCardBodyContainer {
+        height: 100%;
+        width: 100%;
+        padding-right: 2vw;
 
-      .scheduleOxGrid {
-        display: grid;
-        grid-template-rows: 10% 90%;
-        background-color: #2d3848;
-        height: 80vh;
-        width: 80vw;
-        border-radius: 2vh;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
-          0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        pointer-events: none;
-  
-        .scheduleTitle {
-          padding: 0;
-          margin: 0;
-          font-size: 4vh;
-          color: #bbc5d1;
-          font-weight: 600;
-          display: flex;
-          justify-content: center;
-          height: 100%;
-          width: 80vw;
-          align-items: center;
-        }
-  
-        .scheduleCardBodyContainer {
-          height: 100%;
+        .schedulerBodyOxGrid {
+          display: grid;
+          grid-template-columns: 20% 20% 55%;
+          grid-template-rows: 100%;
           width: 100%;
-          padding-right: 2vw;
-  
-          .schedulerBodyOxGrid {
+
+          .scheduleOyHourGrid {
             display: grid;
-            grid-template-columns: 20% 20% 55%;
-            grid-template-rows: 100%;
-            width: 100%;
-  
-            .scheduleOyHourGrid {
-              display: grid;
-              grid-template-columns: 100%;
-              grid-template-rows: repeat(10, 7vh);
-              margin-top: 0.5vh;
-  
-              .scheduleHourGridItem {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                color: #bbc5d1;
-                font-weight: 700;
-                width: 100%;
-                height: 7vh;
-                font-size: 4.5vw;
-              }
+            grid-template-columns: 100%;
+            grid-template-rows: repeat(10, 7vh);
+            margin-top: 0.5vh;
+
+            .scheduleHourGridItem {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              color: #bbc5d1;
+              font-weight: 700;
+              width: 100%;
+              height: 7vh;
+              font-size: 4.5vw;
             }
-  
-            .scheduleOyBubbleGrid {
-              display: grid;
-              grid-template-columns: auto;
-              grid-template-rows: repeat(9, 7vh);
-              margin-top: 3.5vh;
-              margin-bottom: 3.5vh;
-  
-              .scheduleBubbleGridItem {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-top: 1px solid #bbc5d1;
-                margin-left: -1vw;
-                width: 100%;
-                height: 7vh;
-              }
+          }
+
+          .scheduleOyBubbleGrid {
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: repeat(9, 7vh);
+            margin-top: 3.5vh;
+            margin-bottom: 3.5vh;
+
+            .scheduleBubbleGridItem {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border-top: 1px solid #bbc5d1;
+              margin-left: -1vw;
+              width: 100%;
+              height: 7vh;
             }
-  
-            .scheduleOyActivityGrid {
-              display: grid;
-              grid-template-columns: 1fr;
-              grid-template-rows: repeat(9, 7vh);
-              margin-top: 3.5vh;
-              margin-bottom: 3.5vh;
-  
-              .scheduleActivityGridItem {
-                padding-left: 1vw;
-                display: flex;
-                justify-content: flex-start;
-                align-items: center;
-                color: #bbc5d1;
-                font-weight: 700;
-                border-top: 1px solid #bbc5d1;
-                font-size: 4.5vw;
-                position: relative;
-                right: 2vw;
-              }
+          }
+
+          .scheduleOyActivityGrid {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(9, 7vh);
+            margin-top: 3.5vh;
+            margin-bottom: 3.5vh;
+
+            .scheduleActivityGridItem {
+              padding-left: 1vw;
+              display: flex;
+              justify-content: flex-start;
+              align-items: center;
+              color: #bbc5d1;
+              font-weight: 700;
+              border-top: 1px solid #bbc5d1;
+              font-size: 4.5vw;
+              position: relative;
+              right: 2vw;
             }
           }
         }
-  
-        .scheduleCardBodyContainerSaturday {
-          height: 100%;
+      }
+
+      .scheduleCardBodyContainerSaturday {
+        height: 100%;
+        width: 100%;
+        padding-right: 2vw;
+
+        .schedulerBodyOxGridSaturday {
+          display: grid;
+          grid-template-columns: 20% 20% 55%;
+          grid-template-rows: 100%;
           width: 100%;
-          padding-right: 2vw;
-  
-          .schedulerBodyOxGridSaturday {
+
+          .scheduleOyHourGridSaturday {
             display: grid;
-            grid-template-columns: 20% 20% 55%;
-            grid-template-rows: 100%;
-            width: 100%;
-  
-            .scheduleOyHourGridSaturday {
-              display: grid;
-              grid-template-columns: 100%;
-              grid-template-rows: repeat(10, 6vh);
-              margin-top: 0.5vh;
-  
-              .scheduleHourGridItemSaturday {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                color: #bbc5d1;
-                font-weight: 700;
-                width: 100%;
-                height: 6vh;
-                font-size: 4.5vw;
-              }
+            grid-template-columns: 100%;
+            grid-template-rows: repeat(10, 6vh);
+            margin-top: 0.5vh;
+
+            .scheduleHourGridItemSaturday {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              color: #bbc5d1;
+              font-weight: 700;
+              width: 100%;
+              height: 6vh;
+              font-size: 4.5vw;
             }
-  
-            .scheduleOyBubbleGridSaturday {
-              display: grid;
-              grid-template-columns: auto;
-              grid-template-rows: repeat(10, 6vh);
-              margin-top: 3vh;
-              margin-bottom: 3vh;
-  
-              .scheduleBubbleGridItemSaturday {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-top: 1px solid #bbc5d1;
-                margin-left: -1vw;
-                width: 100%;
-                height: 6vh;
-              }
+          }
+
+          .scheduleOyBubbleGridSaturday {
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: repeat(10, 6vh);
+            margin-top: 3vh;
+            margin-bottom: 3vh;
+
+            .scheduleBubbleGridItemSaturday {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border-top: 1px solid #bbc5d1;
+              margin-left: -1vw;
+              width: 100%;
+              height: 6vh;
             }
-  
-            .scheduleOyActivityGridSaturday {
-              display: grid;
-              grid-template-columns: 1fr;
-              grid-template-rows: repeat(10, 6vh);
-              margin-top: 3vh;
-              margin-bottom: 3vh;
-  
-              .scheduleActivityGridItemSaturday {
-                padding-left: 1vw;
-                display: flex;
-                justify-content: flex-start;
-                align-items: center;
-                color: #bbc5d1;
-                font-weight: 700;
-                border-top: 1px solid #bbc5d1;
-                font-size: 4.5vw;
-                position: relative;
-                right: 2vw;
-              }
-  
-              .scheduleActivityGridItemSaturdayNoBorder {
-                padding-left: 1vw;
-                display: flex;
-                justify-content: flex-start;
-                align-items: center;
-                color: #bbc5d1;
-                font-weight: 700;
-                // border-top: 1px solid #bbc5d1;
-                font-size: 4.5vw;
-                position: relative;
-                right: 2vw;
-              }
+          }
+
+          .scheduleOyActivityGridSaturday {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(10, 6vh);
+            margin-top: 3vh;
+            margin-bottom: 3vh;
+
+            .scheduleActivityGridItemSaturday {
+              padding-left: 1vw;
+              display: flex;
+              justify-content: flex-start;
+              align-items: center;
+              color: #bbc5d1;
+              font-weight: 700;
+              border-top: 1px solid #bbc5d1;
+              font-size: 4.5vw;
+              position: relative;
+              right: 2vw;
+            }
+
+            .scheduleActivityGridItemSaturdayNoBorder {
+              padding-left: 1vw;
+              display: flex;
+              justify-content: flex-start;
+              align-items: center;
+              color: #bbc5d1;
+              font-weight: 700;
+              // border-top: 1px solid #bbc5d1;
+              font-size: 4.5vw;
+              position: relative;
+              right: 2vw;
             }
           }
         }
       }
     }
-
- 
   }
 }
